<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20pt"
        android:text="@string/title_key"
        android:textSize="24sp"
        android:textColor="@color/design_default_color_primary"/>

    <EditText
        android:id="@+id/inputKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20pt"
        android:layout_marginEnd="20pt"
        android:inputType="number"
        android:autofillHints="1"
        android:textSize="24sp"
        android:textAlignment="center"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20pt"
        android:text="@string/title_input"
        android:textSize="24sp"
        android:textColor="@color/design_default_color_primary"/>

    <EditText
        android:id="@+id/inputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20pt"
        android:layout_marginEnd="20pt"
        android:inputType="text"
        android:autofillHints="Bagus loves Mita and Adri"
        android:textSize="24sp"
        android:textAlignment="center"
        tools:ignore="LabelFor" />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20pt">
        
        <Button
            android:id="@+id/encodeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10pt"
            android:text="@string/encode"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/clear"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/decodeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10pt"
            android:text="@string/decode"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20pt"
        android:text="@string/title_output"
        android:textSize="24sp"
        android:textColor="@color/design_default_color_primary"/>

    <TextView
        android:id="@+id/outputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20pt"
        android:layout_marginStart="20pt"
        android:layout_marginEnd="20pt"
        android:layout_marginBottom="20pt"
        android:textSize="24sp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/copyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/copy"
        tools:ignore="ButtonStyle" />

</LinearLayout>